testdata/pilot-config_dump.json
{
 "configs": [
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.BootstrapConfigDump",
   "bootstrap": {
    "node": {
     "build_version": "4d8eb98dee59b8cd57962230c0430fa2a486c05e/1.9.0-dev/Clean/RELEASE"
    },
    "static_resources": {
     "listeners": [
      {
       "name": "15003",
       "address": {
        "socket_address": {
         "address": "0.0.0.0",
         "port_value": 15003
        }
       },
       "filter_chains": [
        {
         "tls_context": {
          "common_tls_context": {
           "tls_certificates": [
            {
             "certificate_chain": {
              "filename": "/etc/certs/cert-chain.pem"
             },
             "private_key": {
              "filename": "/etc/certs/key.pem"
             }
            }
           ],
           "validation_context": {
            "trusted_ca": {
             "filename": "/etc/certs/root-cert.pem"
            }
           },
           "alpn_protocols": [
            "http/1.1"
           ]
          },
          "require_client_certificate": true
         },
         "filters": [
          {
           "name": "envoy.http_connection_manager",
           "config": {
            "access_log": [
             {
              "config": {
               "path": "/dev/stdout"
              },
              "name": "envoy.file_access_log"
             }
            ],
            "http_filters": [
             {
              "name": "mixer",
              "config": {
               "default_destination_service": "istio-pilot.istio-system.svc.cluster.local",
               "transport": {
                "report_cluster": "mixer_report_server",
                "attributes_for_mixer_proxy": {
                 "attributes": {
                  "source.uid": {
                   "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                  }
                 }
                },
                "check_cluster": "mixer_check_server"
               },
               "service_configs": {
                "istio-pilot.istio-system.svc.cluster.local": {
                 "mixer_attributes": {
                  "attributes": {
                   "context.reporter.kind": {
                    "string_value": "inbound"
                   },
                   "destination.port": {
                    "int64_value": 15003
                   },
                   "context.reporter.uid": {
                    "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                   },
                   "destination.namespace": {
                    "string_value": "istio-system"
                   },
                   "destination.service.host": {
                    "string_value": "istio-pilot.istio-system.svc.cluster.local"
                   },
                   "destination.ip": {
                    "bytes_value": "AAAAAAAAAAAAAP//rB5x7A=="
                   },
                   "destination.uid": {
                    "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                   }
                  }
                 },
                 "disable_check_calls": true
                }
               }
              }
             },
             {
              "name": "envoy.router"
             }
            ],
            "stat_prefix": "15003",
            "route_config": {
             "name": "15003",
             "virtual_hosts": [
              {
               "routes": [
                {
                 "match": {
                  "prefix": "/"
                 },
                 "route": {
                  "cluster": "in.8080",
                  "timeout": "0.000s"
                 },
                 "decorator": {
                  "operation": "v1"
                 }
                }
               ],
               "domains": [
                "*"
               ],
               "name": "istio-pilot.istio-system.svc.cluster.local"
              }
             ]
            }
           }
          }
         ]
        }
       ]
      },
      {
       "name": "15011",
       "address": {
        "socket_address": {
         "address": "0.0.0.0",
         "port_value": 15011
        }
       },
       "filter_chains": [
        {
         "tls_context": {
          "common_tls_context": {
           "tls_certificates": [
            {
             "certificate_chain": {
              "filename": "/etc/certs/cert-chain.pem"
             },
             "private_key": {
              "filename": "/etc/certs/key.pem"
             }
            }
           ],
           "validation_context": {
            "trusted_ca": {
             "filename": "/etc/certs/root-cert.pem"
            }
           },
           "alpn_protocols": [
            "h2"
           ]
          },
          "require_client_certificate": true
         },
         "filters": [
          {
           "name": "envoy.http_connection_manager",
           "config": {
            "http2_protocol_options": {
             "max_concurrent_streams": 1073741824
            },
            "route_config": {
             "virtual_hosts": [
              {
               "routes": [
                {
                 "route": {
                  "cluster": "in.15010",
                  "timeout": "0.000s"
                 },
                 "decorator": {
                  "operation": "xDS"
                 },
                 "match": {
                  "prefix": "/"
                 }
                }
               ],
               "domains": [
                "*"
               ],
               "name": "istio-pilot.istio-system.svc.cluster.local"
              }
             ],
             "name": "15011"
            },
            "codec_type": "HTTP2",
            "stat_prefix": "15011",
            "access_log": [
             {
              "name": "envoy.file_access_log",
              "config": {
               "path": "/dev/stdout"
              }
             }
            ],
            "http_filters": [
             {
              "config": {
               "transport": {
                "check_cluster": "mixer_check_server",
                "report_cluster": "mixer_report_server",
                "attributes_for_mixer_proxy": {
                 "attributes": {
                  "source.uid": {
                   "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                  }
                 }
                }
               },
               "service_configs": {
                "istio-pilot.istio-system.svc.cluster.local": {
                 "mixer_attributes": {
                  "attributes": {
                   "destination.service.host": {
                    "string_value": "istio-pilot.istio-system.svc.cluster.local"
                   },
                   "destination.ip": {
                    "bytes_value": "AAAAAAAAAAAAAP//rB5x7A=="
                   },
                   "destination.uid": {
                    "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                   },
                   "context.reporter.kind": {
                    "string_value": "inbound"
                   },
                   "destination.port": {
                    "int64_value": 15011
                   },
                   "context.reporter.uid": {
                    "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                   },
                   "destination.namespace": {
                    "string_value": "istio-system"
                   }
                  }
                 },
                 "disable_check_calls": true
                }
               },
               "default_destination_service": "istio-pilot.istio-system.svc.cluster.local"
              },
              "name": "mixer"
             },
             {
              "name": "envoy.router"
             }
            ]
           }
          }
         ]
        }
       ]
      },
      {
       "name": "15005",
       "address": {
        "socket_address": {
         "address": "0.0.0.0",
         "port_value": 15005
        }
       },
       "filter_chains": [
        {
         "tls_context": {
          "common_tls_context": {
           "tls_certificates": [
            {
             "certificate_chain": {
              "filename": "/etc/certs/cert-chain.pem"
             },
             "private_key": {
              "filename": "/etc/certs/key.pem"
             }
            }
           ],
           "validation_context": {
            "trusted_ca": {
             "filename": "/etc/certs/root-cert.pem"
            }
           },
           "alpn_protocols": [
            "http/1.1"
           ]
          },
          "require_client_certificate": true
         },
         "filters": [
          {
           "name": "envoy.http_connection_manager",
           "config": {
            "access_log": [
             {
              "name": "envoy.file_access_log",
              "config": {
               "path": "/dev/stdout"
              }
             }
            ],
            "http_filters": [
             {
              "config": {
               "transport": {
                "report_cluster": "mixer_report_server",
                "attributes_for_mixer_proxy": {
                 "attributes": {
                  "source.uid": {
                   "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                  }
                 }
                },
                "check_cluster": "mixer_check_server"
               },
               "service_configs": {
                "istio-pilot.istio-system.svc.cluster.local": {
                 "mixer_attributes": {
                  "attributes": {
                   "destination.uid": {
                    "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                   },
                   "context.reporter.kind": {
                    "string_value": "inbound"
                   },
                   "destination.port": {
                    "int64_value": 15005
                   },
                   "context.reporter.uid": {
                    "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                   },
                   "destination.namespace": {
                    "string_value": "istio-system"
                   },
                   "destination.service.host": {
                    "string_value": "istio-pilot.istio-system.svc.cluster.local"
                   },
                   "destination.ip": {
                    "bytes_value": "AAAAAAAAAAAAAP//rB5x7A=="
                   }
                  }
                 },
                 "disable_check_calls": true
                }
               },
               "default_destination_service": "istio-pilot.istio-system.svc.cluster.local"
              },
              "name": "mixer"
             },
             {
              "name": "envoy.router"
             }
            ],
            "stat_prefix": "15005",
            "route_config": {
             "name": "15005",
             "virtual_hosts": [
              {
               "routes": [
                {
                 "route": {
                  "cluster": "in.8080",
                  "timeout": "0.000s"
                 },
                 "decorator": {
                  "operation": "v1"
                 },
                 "match": {
                  "prefix": "/"
                 }
                }
               ],
               "domains": [
                "*"
               ],
               "name": "istio-pilot.istio-system.svc.cluster.local"
              }
             ]
            }
           }
          }
         ]
        }
       ]
      },
      {
       "name": "15007",
       "address": {
        "socket_address": {
         "address": "0.0.0.0",
         "port_value": 15007
        }
       },
       "filter_chains": [
        {
         "filters": [
          {
           "name": "envoy.http_connection_manager",
           "config": {
            "route_config": {
             "name": "15007",
             "virtual_hosts": [
              {
               "routes": [
                {
                 "route": {
                  "cluster": "in.8080",
                  "timeout": "0.000s"
                 },
                 "decorator": {
                  "operation": "v1"
                 },
                 "match": {
                  "prefix": "/"
                 }
                }
               ],
               "domains": [
                "*"
               ],
               "name": "istio-pilot.istio-system.svc.cluster.local"
              }
             ]
            },
            "access_log": [
             {
              "config": {
               "path": "/dev/stdout"
              },
              "name": "envoy.file_access_log"
             }
            ],
            "http_filters": [
             {
              "name": "mixer",
              "config": {
               "transport": {
                "report_cluster": "mixer_report_server",
                "attributes_for_mixer_proxy": {
                 "attributes": {
                  "source.uid": {
                   "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                  }
                 }
                },
                "check_cluster": "mixer_check_server"
               },
               "service_configs": {
                "istio-pilot.istio-system.svc.cluster.local": {
                 "mixer_attributes": {
                  "attributes": {
                   "destination.uid": {
                    "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                   },
                   "context.reporter.kind": {
                    "string_value": "inbound"
                   },
                   "destination.port": {
                    "int64_value": 15007
                   },
                   "context.reporter.uid": {
                    "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                   },
                   "destination.namespace": {
                    "string_value": "istio-system"
                   },
                   "destination.service.host": {
                    "string_value": "istio-pilot.istio-system.svc.cluster.local"
                   },
                   "destination.ip": {
                    "bytes_value": "AAAAAAAAAAAAAP//rB5x7A=="
                   }
                  }
                 },
                 "disable_check_calls": true
                }
               },
               "default_destination_service": "istio-pilot.istio-system.svc.cluster.local"
              }
             },
             {
              "name": "envoy.router"
             }
            ],
            "stat_prefix": "15007"
           }
          }
         ]
        }
       ]
      }
     ],
     "clusters": [
      {
       "name": "in.8080",
       "connect_timeout": "1s",
       "hosts": [
        {
         "socket_address": {
          "address": "127.0.0.1",
          "port_value": 8080
         }
        }
       ],
       "circuit_breakers": {
        "thresholds": [
         {
          "max_connections": 100000,
          "max_pending_requests": 100000,
          "max_requests": 100000,
          "max_retries": 3
         }
        ]
       }
      },
      {
       "name": "in.15010",
       "connect_timeout": "1s",
       "hosts": [
        {
         "socket_address": {
          "address": "127.0.0.1",
          "port_value": 15010
         }
        }
       ],
       "circuit_breakers": {
        "thresholds": [
         {
          "max_connections": 100000,
          "max_pending_requests": 100000,
          "max_requests": 100000,
          "max_retries": 3
         }
        ]
       },
       "http2_protocol_options": {}
      },
      {
       "name": "mixer_report_server",
       "type": "STRICT_DNS",
       "connect_timeout": "1s",
       "hosts": [
        {
         "socket_address": {
          "address": "istio-telemetry",
          "port_value": 15004
         }
        }
       ],
       "circuit_breakers": {
        "thresholds": [
         {
          "max_connections": 100000,
          "max_pending_requests": 100000,
          "max_requests": 100000,
          "max_retries": 3
         }
        ]
       },
       "tls_context": {
        "common_tls_context": {
         "tls_certificates": [
          {
           "certificate_chain": {
            "filename": "/etc/certs/cert-chain.pem"
           },
           "private_key": {
            "filename": "/etc/certs/key.pem"
           }
          }
         ],
         "validation_context": {
          "trusted_ca": {
           "filename": "/etc/certs/root-cert.pem"
          },
          "verify_subject_alt_name": [
           "spiffe://cluster.local/ns/istio-system/sa/istio-mixer-service-account"
          ]
         }
        }
       },
       "http2_protocol_options": {}
      }
     ]
    },
    "admin": {
     "access_log_path": "/dev/null",
     "address": {
      "socket_address": {
       "address": "127.0.0.1",
       "port_value": 15000
      }
     }
    }
   },
   "last_updated": "2018-11-20T15:26:05.143Z"
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.ClustersConfigDump",
   "static_clusters": [
    {
     "cluster": {
      "name": "in.15010",
      "connect_timeout": "1s",
      "hosts": [
       {
        "socket_address": {
         "address": "127.0.0.1",
         "port_value": 15010
        }
       }
      ],
      "circuit_breakers": {
       "thresholds": [
        {
         "max_connections": 100000,
         "max_pending_requests": 100000,
         "max_requests": 100000,
         "max_retries": 3
        }
       ]
      },
      "http2_protocol_options": {}
     },
     "last_updated": "2018-11-20T15:26:05.145Z"
    },
    {
     "cluster": {
      "name": "in.8080",
      "connect_timeout": "1s",
      "hosts": [
       {
        "socket_address": {
         "address": "127.0.0.1",
         "port_value": 8080
        }
       }
      ],
      "circuit_breakers": {
       "thresholds": [
        {
         "max_connections": 100000,
         "max_pending_requests": 100000,
         "max_requests": 100000,
         "max_retries": 3
        }
       ]
      }
     },
     "last_updated": "2018-11-20T15:26:05.145Z"
    },
    {
     "cluster": {
      "name": "mixer_report_server",
      "type": "STRICT_DNS",
      "connect_timeout": "1s",
      "hosts": [
       {
        "socket_address": {
         "address": "istio-telemetry",
         "port_value": 15004
        }
       }
      ],
      "circuit_breakers": {
       "thresholds": [
        {
         "max_connections": 100000,
         "max_pending_requests": 100000,
         "max_requests": 100000,
         "max_retries": 3
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/istio-system/sa/istio-mixer-service-account"
         ]
        }
       }
      },
      "http2_protocol_options": {}
     },
     "last_updated": "2018-11-20T15:26:05.146Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.ListenersConfigDump",
   "static_listeners": [
    {
     "listener": {
      "name": "15003",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15003
       }
      },
      "filter_chains": [
       {
        "tls_context": {
         "common_tls_context": {
          "tls_certificates": [
           {
            "certificate_chain": {
             "filename": "/etc/certs/cert-chain.pem"
            },
            "private_key": {
             "filename": "/etc/certs/key.pem"
            }
           }
          ],
          "validation_context": {
           "trusted_ca": {
            "filename": "/etc/certs/root-cert.pem"
           }
          },
          "alpn_protocols": [
           "http/1.1"
          ]
         },
         "require_client_certificate": true
        },
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "service_configs": {
               "istio-pilot.istio-system.svc.cluster.local": {
                "disable_check_calls": true,
                "mixer_attributes": {
                 "attributes": {
                  "destination.ip": {
                   "bytes_value": "AAAAAAAAAAAAAP//rB5x7A=="
                  },
                  "destination.service.host": {
                   "string_value": "istio-pilot.istio-system.svc.cluster.local"
                  },
                  "destination.uid": {
                   "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                  },
                  "context.reporter.kind": {
                   "string_value": "inbound"
                  },
                  "destination.port": {
                   "int64_value": 15003
                  },
                  "context.reporter.uid": {
                   "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                  },
                  "destination.namespace": {
                   "string_value": "istio-system"
                  }
                 }
                }
               }
              },
              "transport": {
               "check_cluster": "mixer_check_server",
               "report_cluster": "mixer_report_server",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                 }
                }
               }
              },
              "default_destination_service": "istio-pilot.istio-system.svc.cluster.local"
             }
            },
            {
             "name": "envoy.router"
            }
           ],
           "stat_prefix": "15003",
           "route_config": {
            "virtual_hosts": [
             {
              "routes": [
               {
                "match": {
                 "prefix": "/"
                },
                "decorator": {
                 "operation": "v1"
                },
                "route": {
                 "cluster": "in.8080",
                 "timeout": "0.000s"
                }
               }
              ],
              "domains": [
               "*"
              ],
              "name": "istio-pilot.istio-system.svc.cluster.local"
             }
            ],
            "name": "15003"
           }
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2018-11-20T15:26:05.153Z"
    },
    {
     "listener": {
      "name": "15011",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15011
       }
      },
      "filter_chains": [
       {
        "tls_context": {
         "common_tls_context": {
          "tls_certificates": [
           {
            "certificate_chain": {
             "filename": "/etc/certs/cert-chain.pem"
            },
            "private_key": {
             "filename": "/etc/certs/key.pem"
            }
           }
          ],
          "validation_context": {
           "trusted_ca": {
            "filename": "/etc/certs/root-cert.pem"
           }
          },
          "alpn_protocols": [
           "h2"
          ]
         },
         "require_client_certificate": true
        },
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "http2_protocol_options": {
            "max_concurrent_streams": 1073741824
           },
           "route_config": {
            "virtual_hosts": [
             {
              "routes": [
               {
                "decorator": {
                 "operation": "xDS"
                },
                "route": {
                 "cluster": "in.15010",
                 "timeout": "0.000s"
                },
                "match": {
                 "prefix": "/"
                }
               }
              ],
              "domains": [
               "*"
              ],
              "name": "istio-pilot.istio-system.svc.cluster.local"
             }
            ],
            "name": "15011"
           },
           "codec_type": "HTTP2",
           "stat_prefix": "15011",
           "access_log": [
            {
             "config": {
              "path": "/dev/stdout"
             },
             "name": "envoy.file_access_log"
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "service_configs": {
               "istio-pilot.istio-system.svc.cluster.local": {
                "disable_check_calls": true,
                "mixer_attributes": {
                 "attributes": {
                  "context.reporter.kind": {
                   "string_value": "inbound"
                  },
                  "destination.port": {
                   "int64_value": 15011
                  },
                  "context.reporter.uid": {
                   "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                  },
                  "destination.namespace": {
                   "string_value": "istio-system"
                  },
                  "destination.service.host": {
                   "string_value": "istio-pilot.istio-system.svc.cluster.local"
                  },
                  "destination.ip": {
                   "bytes_value": "AAAAAAAAAAAAAP//rB5x7A=="
                  },
                  "destination.uid": {
                   "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                  }
                 }
                }
               }
              },
              "transport": {
               "check_cluster": "mixer_check_server",
               "report_cluster": "mixer_report_server",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                 }
                }
               }
              },
              "default_destination_service": "istio-pilot.istio-system.svc.cluster.local"
             }
            },
            {
             "name": "envoy.router"
            }
           ]
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2018-11-20T15:26:05.156Z"
    },
    {
     "listener": {
      "name": "15005",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15005
       }
      },
      "filter_chains": [
       {
        "tls_context": {
         "common_tls_context": {
          "tls_certificates": [
           {
            "certificate_chain": {
             "filename": "/etc/certs/cert-chain.pem"
            },
            "private_key": {
             "filename": "/etc/certs/key.pem"
            }
           }
          ],
          "validation_context": {
           "trusted_ca": {
            "filename": "/etc/certs/root-cert.pem"
           }
          },
          "alpn_protocols": [
           "http/1.1"
          ]
         },
         "require_client_certificate": true
        },
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "http_filters": [
            {
             "config": {
              "service_configs": {
               "istio-pilot.istio-system.svc.cluster.local": {
                "disable_check_calls": true,
                "mixer_attributes": {
                 "attributes": {
                  "context.reporter.kind": {
                   "string_value": "inbound"
                  },
                  "destination.port": {
                   "int64_value": 15005
                  },
                  "context.reporter.uid": {
                   "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                  },
                  "destination.namespace": {
                   "string_value": "istio-system"
                  },
                  "destination.ip": {
                   "bytes_value": "AAAAAAAAAAAAAP//rB5x7A=="
                  },
                  "destination.service.host": {
                   "string_value": "istio-pilot.istio-system.svc.cluster.local"
                  },
                  "destination.uid": {
                   "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                  }
                 }
                }
               }
              },
              "transport": {
               "report_cluster": "mixer_report_server",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                 }
                }
               },
               "check_cluster": "mixer_check_server"
              },
              "default_destination_service": "istio-pilot.istio-system.svc.cluster.local"
             },
             "name": "mixer"
            },
            {
             "name": "envoy.router"
            }
           ],
           "stat_prefix": "15005",
           "route_config": {
            "name": "15005",
            "virtual_hosts": [
             {
              "routes": [
               {
                "match": {
                 "prefix": "/"
                },
                "decorator": {
                 "operation": "v1"
                },
                "route": {
                 "cluster": "in.8080",
                 "timeout": "0.000s"
                }
               }
              ],
              "domains": [
               "*"
              ],
              "name": "istio-pilot.istio-system.svc.cluster.local"
             }
            ]
           },
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout"
             }
            }
           ]
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2018-11-20T15:26:05.158Z"
    },
    {
     "listener": {
      "name": "15007",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15007
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "route_config": {
            "name": "15007",
            "virtual_hosts": [
             {
              "routes": [
               {
                "decorator": {
                 "operation": "v1"
                },
                "route": {
                 "cluster": "in.8080",
                 "timeout": "0.000s"
                },
                "match": {
                 "prefix": "/"
                }
               }
              ],
              "domains": [
               "*"
              ],
              "name": "istio-pilot.istio-system.svc.cluster.local"
             }
            ]
           },
           "access_log": [
            {
             "name": "envoy.file_access_log",
             "config": {
              "path": "/dev/stdout"
             }
            }
           ],
           "http_filters": [
            {
             "name": "mixer",
             "config": {
              "service_configs": {
               "istio-pilot.istio-system.svc.cluster.local": {
                "disable_check_calls": true,
                "mixer_attributes": {
                 "attributes": {
                  "context.reporter.kind": {
                   "string_value": "inbound"
                  },
                  "destination.port": {
                   "int64_value": 15007
                  },
                  "context.reporter.uid": {
                   "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                  },
                  "destination.namespace": {
                   "string_value": "istio-system"
                  },
                  "destination.service.host": {
                   "string_value": "istio-pilot.istio-system.svc.cluster.local"
                  },
                  "destination.ip": {
                   "bytes_value": "AAAAAAAAAAAAAP//rB5x7A=="
                  },
                  "destination.uid": {
                   "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                  }
                 }
                }
               }
              },
              "transport": {
               "check_cluster": "mixer_check_server",
               "report_cluster": "mixer_report_server",
               "attributes_for_mixer_proxy": {
                "attributes": {
                 "source.uid": {
                  "string_value": "kubernetes://istio-pilot-5cff584bd9-69jcj.istio-system"
                 }
                }
               }
              },
              "default_destination_service": "istio-pilot.istio-system.svc.cluster.local"
             }
            },
            {
             "name": "envoy.router"
            }
           ],
           "stat_prefix": "15007"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2018-11-20T15:26:05.159Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v2alpha.RoutesConfigDump",
   "static_route_configs": [
    {
     "route_config": {
      "name": "15007",
      "virtual_hosts": [
       {
        "name": "istio-pilot.istio-system.svc.cluster.local",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "in.8080",
           "timeout": "0s"
          },
          "decorator": {
           "operation": "v1"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2018-11-20T15:26:05.159Z"
    },
    {
     "route_config": {
      "name": "15005",
      "virtual_hosts": [
       {
        "name": "istio-pilot.istio-system.svc.cluster.local",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "in.8080",
           "timeout": "0s"
          },
          "decorator": {
           "operation": "v1"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2018-11-20T15:26:05.157Z"
    },
    {
     "route_config": {
      "name": "15011",
      "virtual_hosts": [
       {
        "name": "istio-pilot.istio-system.svc.cluster.local",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "in.15010",
           "timeout": "0s"
          },
          "decorator": {
           "operation": "xDS"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2018-11-20T15:26:05.155Z"
    },
    {
     "route_config": {
      "name": "15003",
      "virtual_hosts": [
       {
        "name": "istio-pilot.istio-system.svc.cluster.local",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/"
          },
          "route": {
           "cluster": "in.8080",
           "timeout": "0s"
          },
          "decorator": {
           "operation": "v1"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2018-11-20T15:26:05.151Z"
    }
   ]
  }
 ]
}
